fix spacing issue on phone

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 80vh;
+  justify-content: space-between;
 }
 
 h1 {
